Fix overflow tree menu

--- a/public/custom-style-sheet.css
+++ b/public/custom-style-sheet.css
@@ -1,9 +1,12 @@
 #web-oc-sidebar-target {
   flex: 1 1 auto;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .tree-menu {
-  max-height: 100%;
+  flex: 1 1 auto;
   overflow-y: auto !important;
   overflow-x: hidden;
 }
